Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19322

compaction failed with NO_DB_INSTANCE or CHECKSUM_ERROR

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 4.5.0
    • 4.5.0
    • forestdb
    • build 2151 on ubutu 14.04
    • Untriaged
    • Unknown
    • ForestDB: Oct 17 - Nov 4

    Description

      Customer impact: the file with the issue refuses to compact. this means we will eventually run out of disk space maintaining the index on the node as mutations arrive.

      indexer.log attached for 2 separate clusters - one configured with circular writes (indexer.log) and the other with append only writes (indexer2.log)
      . in both cases the same index is having trouble compacting.

      Attachments

        1. indexer.log
          19.13 MB
        2. indexer2.log
          3.87 MB
        3. indexer3.log
          431 kB

        Activity

          People

            jung-sang Jung-Sang Ahn (Inactive)
            cihan Cihan Biyikoglu (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              PagerDuty